@@ -402,7 +402,7 @@ class SoftRootCutter(Modifier):
 
     def modify(self, request, nodes, namespace, root_id, post_cut, breadcrumb):
         # only apply this modifier if we're pre-cut (since what we do is cut)
-        if post_cut or not get_cms_setting('SOFTROOT'):
+        if post_cut:
             return nodes
         selected = None
         root_nodes = []
